navbar overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,8 @@
 @tailwind utilities;
 
 :root {
+  body {
+  }
 }
 
 @media (prefers-color-scheme: dark) {
