--- a/app/page.module.css
+++ b/app/page.module.css
@@ -41,14 +41,14 @@
   align-items: center;
   background-color: rgba(211, 211, 211, 0.8);
   z-index: 1000;
-  border-radius: 25px;
+  border-radius: 27px;
   padding-right: 10px;
   backdrop-filter: blur(5px);
   opacity: 1;
   @media (max-width: 768px) {
     display: none;
   }
-  animation: fadeIn 0.5s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -66,7 +66,7 @@
   align-items: center;
   background-color: rgba(211, 211, 211, 0.8);
   z-index: 1000;
-  border-radius: 25px;
+  border-radius: 27px;
   padding-right: 10px;
   backdrop-filter: blur(5px);
 
@@ -74,7 +74,7 @@
     display: none;
   }
 
-  animation: fadeIn 0.5s ease-in-out;
+  animation: fadeIn 0.4s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -107,9 +107,11 @@
 
 .hidden {
   width: 0px;
+  height: 0px;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.3s ease-in-out;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
 }
 
 .icon {
@@ -119,13 +121,12 @@
 
 .show {
   position: fixed;
-  bottom: 0;
-  right: 0;
+  bottom: 20px;
+  right: 20px;
   height: 40px;
   background-color: var(--lightgrey);
   padding: 8px;
   border-radius: 15px;
-  margin: 20px;
   opacity: 0.8;
   cursor: pointer;
   @media (max-width: 768px) {
